Reload data changes and css fix for alignments

--- a/src/Views/Cart.module.css
+++ b/src/Views/Cart.module.css
@@ -47,7 +47,7 @@
 .list_row > P {
   justify-self: flex-start;
 }
-.summary {
+.subTotal {
   width: 100%;
 }
 .reload {
@@ -61,10 +61,10 @@
     width: 95vw;
   }
   .item_list,
-  .summary {
+  .subTotal {
     grid-column: 1/3;
   }
-  .summary {
+  .subTotal {
     grid-row: 2/3;
   }
 }
